# Audio-DNA

./: .gitignore  ARCHITECTURE.md  BUILDLOG.md  CLAUDE.md  CMakeLists.txt  LESSONS_LEARNED.md  README.md  TASKPLAN.md
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake  FindAubio.cmake
research/: ARCH_audio_io.md  ARCH_pipeline.md  ARCH_realtime_constraints.md  FEATURES_amplitude_dynamics.md  FEATURES_frequency_bands.md  FEATURES_mfcc_mel.md  FEATURES_pitch_harmonic.md  FEATURES_psychoacoustic.md  FEATURES_rhythm_tempo.md  FEATURES_spectral.md  FEATURES_structural.md  FEATURES_transients_texture.md  IMPL_calibration_adaptation.md  IMPL_minimal_prototype.md  IMPL_project_setup.md  IMPL_testing_validation.md  INDEX.md  LIB_aubio.md  LIB_essentia.md  LIB_fft_comparison.md  LIB_juce.md  LIB_rtaudio_miniaudio.md  LIB_rust_ecosystem.md  REF_genre_parameter_presets.md  REF_latency_numbers.md  REF_math_reference.md  REF_resources_links.md  VIDEO_feature_to_visual_mapping.md  VIDEO_opengl_integration.md  VIDEO_vj_frameworks.md
shaders/: hue_shift.frag  passthrough.vert  rgb_split.frag  ripple.frag  vignette.frag
src/: Main.cpp  MainComponent.cpp  MainComponent.h
src/analysis/: AnalysisThread.cpp  AnalysisThread.h  BPMTracker.cpp  BPMTracker.h  ChromaExtractor.cpp  ChromaExtractor.h  FFTProcessor.cpp  FFTProcessor.h  FeatureSnapshot.h  KeyDetector.cpp  KeyDetector.h  LoudnessAnalyzer.cpp  LoudnessAnalyzer.h  MFCCExtractor.cpp  MFCCExtractor.h  OnsetDetector.cpp  OnsetDetector.h  PitchTracker.cpp  PitchTracker.h  SpectralFeatures.cpp  SpectralFeatures.h  StructuralDetector.cpp  StructuralDetector.h
src/audio/: AudioCallback.cpp  AudioCallback.h  AudioEngine.cpp  AudioEngine.h  RingBuffer.h
src/effects/: Effect.cpp  Effect.h  EffectChain.cpp  EffectChain.h  EffectLibrary.cpp  EffectLibrary.h  UniformBridge.cpp  UniformBridge.h
src/features/: FeatureBus.cpp  FeatureBus.h  Smoother.h
src/keyboard/: KeySlot.h
src/mapping/: CurveTransforms.h  MappingEngine.cpp  MappingEngine.h  MappingTypes.h
src/render/: CompositorEngine.cpp  CompositorEngine.h  EmbeddedShaders.h  FullscreenQuad.cpp  FullscreenQuad.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/ui/: AudioReadoutPanel.cpp  AudioReadoutPanel.h  EffectsRackPanel.cpp  EffectsRackPanel.h  KeyEditor.cpp  KeyEditor.h  KeyboardPanel.cpp  KeyboardPanel.h  Knob.cpp  Knob.h  LookAndFeel.cpp  LookAndFeel.h  MappingEditor.cpp  MappingEditor.h  OutputWindow.cpp  OutputWindow.h  PresetManager.cpp  PresetManager.h  PreviewPanel.cpp  PreviewPanel.h  SpectrumDisplay.cpp  SpectrumDisplay.h  WaveformDisplay.cpp  WaveformDisplay.h
tests/: CMakeLists.txt  test_feature_bus.cpp  test_integration_pipeline.cpp  test_mapping_engine.cpp  test_ring_buffer.cpp  test_smoother.cpp  test_spectral_features.cpp
